# wagtaildemo

./: .cr.ini  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  up.sh
.github/workflows/: codered-deploy.yml
home/: admin.py  lookup.py  models.py
home/migrations/: 0003_alter_homepage_options_homepage_body_homepage_intro.py  0004_homepage_view_count.py  0005_coffeeman.py  0006_coffeeman_time_stamp.py  0007_alter_coffeeman_time_stamp.py  0008_alter_coffeeman_time_stamp.py  0009_remove_coffeeman_can_drink_and_more.py  0010_lookup.py  0011_alter_coffeeman_time_stamp.py  0012_homepage_ip.py
home/static/css/: home_page.css
home/templates/home/: home_page.html
wagtaildemo/: wsgi.py
wagtaildemo/settings/: base.py  dev.py  prod.py
wagtaildemo/templates/: base.html
